# fluxbench

./: Cargo.toml  LICENSE  README.md  flux.toml
.github/workflows/: baseline.yml  benchmark.yml  ci.yml  release.yml  test.yml
examples/: Cargo.toml
examples/examples/: ci_regression.rs  feature_allocations.rs  feature_async.rs  feature_compare.rs  feature_iteration.rs  feature_panic.rs  feature_params.rs  feature_verify.rs  library_bench.rs
examples/src/: lib.rs
fluxbench/: Cargo.toml
fluxbench-cli/: Cargo.toml
fluxbench-cli/src/: config.rs  lib.rs  planner.rs  supervisor.rs
fluxbench-cli/src/executor/: execution.rs  formatting.rs  metadata.rs  mod.rs  report.rs  statistics.rs  verification.rs
fluxbench-core/src/: bencher.rs  lib.rs  measure.rs  worker.rs
fluxbench-ipc/src/: framing.rs  lib.rs  messages.rs
fluxbench-logic/src/: context.rs  graph.rs  lib.rs  verification.rs
fluxbench-macros/src/: lib.rs
fluxbench-report/src/: github.rs  json.rs  lib.rs  report.rs
fluxbench-stats/src/: bootstrap.rs  comparison.rs  lib.rs  outliers.rs  percentiles.rs  summary.rs
fluxbench/examples/: benchmarks.rs
fluxbench/src/: lib.rs
fluxbench/tests/: integration.rs
