[package]
name = "fluxbench"
description = "Benchmarking framework with crash isolation, bootstrap statistics, and CI integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
fluxbench-cli.workspace = true
fluxbench-core.workspace = true
fluxbench-macros.workspace = true
fluxbench-stats.workspace = true
fluxbench-logic.workspace = true
fluxbench-ipc.workspace = true

# Re-export for macros
inventory.workspace = true
tokio.workspace = true

[dev-dependencies]
rand.workspace = true

[[example]]
name = "benchmarks"
path = "examples/benchmarks.rs"
